--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <title>MULC</title>
   <style>
-    body {
-      background-color: #000;
+    h1 {
+      color: red;
     }
   </style>
 </head>
