--- a/index.html
+++ b/index.html
@@ -12,23 +12,7 @@
 <body>
   <h1>Hello World</h1>
   <p>Hello world </p>
-  <p>Hello world </p>
-  <p>Hello world </p>
-  <p>Hello world </p>
-  <p>Hello world </p>
-  <p>Hello world </p>
-  <p>Hello world </p>
-  <p>Hello world </p>
-  <p>Hello world </p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum pellentesque lacinia metus et tempor. Aliquam commodo mollis eros sit amet ullamcorper. Praesent tempus nunc non diam elementum, et convallis nisi blandit. Maecenas consectetur mauris viverra purus sagittis, in facilisis mauris mollis. Sed sit amet tortor sed felis vestibulum blandit eu vel felis. Nulla pellentesque non tortor eget viverra. Phasellus blandit viverra nisl condimentum convallis. Proin magna libero, congue sed accumsan sed, varius sed ante. Duis ex odio, vehicula in pellentesque eget, egestas non turpis. Etiam dictum fringilla accumsan.
-
-Nunc a sem in ante fermentum dignissim nec non massa. Donec non porta magna. Suspendisse hendrerit lectus nec ipsum imperdiet lacinia. Donec eget eros dignissim, feugiat sem eu, finibus velit. Morbi dolor odio, consequat eget convallis at, aliquet eget justo. Aenean id vestibulum justo. Morbi maximus euismod elementum. Donec ipsum metus, fermentum eget bibendum non, scelerisque at ipsum. Suspendisse rutrum ac lectus id dignissim. Nunc at dapibus orci. Quisque ut auctor velit, ac fermentum tortor.
-
-Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Proin sagittis, mi id ornare cursus, turpis leo rutrum orci, ac tincidunt odio quam eu justo. Etiam at aliquam urna. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nulla porta ut sapien eget tempus. Praesent a tortor nulla. Aenean venenatis, mauris at placerat congue, urna libero sodales nibh, sed suscipit felis eros sed ipsum. Fusce ac ante id orci interdum faucibus. Maecenas malesuada placerat orci nec euismod. In tincidunt lobortis nunc non interdum. Praesent consequat arcu vel elit egestas rhoncus. Duis ac lectus condimentum, elementum odio ut, ullamcorper augue.
-
-Praesent eu dui ut dolor tristique posuere nec eget ligula. Nulla porta varius vulputate. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi ipsum justo, posuere id rhoncus ac, porttitor volutpat lorem. Aenean nec libero condimentum, sodales nisl a, gravida lectus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Suspendisse nec iaculis felis. Sed vel magna accumsan, dictum justo a, dapibus leo. Proin id enim ullamcorper, efficitur dolor vitae, varius libero. Aenean auctor accumsan sapien a commodo. Etiam mauris neque, feugiat eu dolor at, gravida suscipit arcu. Ut molestie urna et finibus commodo. Ut ultricies dui risus. Praesent varius, urna eget eleifend dapibus, felis diam placerat odio, quis commodo orci felis molestie mauris. Donec finibus sem consectetur dolor sollicitudin, nec mattis ex tincidunt. Donec volutpat lectus et nulla mollis, at pellentesque nunc ornare.
-
-Sed blandit suscipit eleifend. Ut varius ante mi, accumsan venenatis nisl aliquam ac. Nulla tincidunt ex eu pulvinar posuere. In hac habitasse platea dictumst. Sed at dolor neque. Curabitur feugiat pulvinar euismod. Mauris sit amet nunc interdum, aliquam diam sed, tincidunt enim. Donec scelerisque vitae neque eu commodo. Cras in nisi mi. Proin in dui at lorem accumsan volutpat. Aliquam nec semper dui. Suspendisse ut pulvinar turpis. Pellentesque ac odio egestas nibh ultrices viverra.</p>
+	<p>I am testing out how the integration of git pages and Canvas works.</p>
 </body>
 
 <footer>
